exports[`UserBox component snapshot renders basic required data with array children 1`] = `
<main>
  <h1
    className="header_fffb07">
    <span
      className="headerText_104b05c">
      Users
    </span>
     > 
    View Profile
  </h1>
  <div
    className="box_5m47zw">
    <form>
      <label>
        Form
      </label>
    </form>
    <p>
      Some text
    </p>
  </div>
</main>
`;

exports[`UserBox component snapshot renders basic required data with single child 1`] = `
<main>
  <h1
    className="header_fffb07">
    <span
      className="headerText_104b05c">
      Users
    </span>
     > 
    View Profile
  </h1>
  <div
    className="box_5m47zw">
    <form>
      <label>
        Form
      </label>
    </form>
  </div>
</main>
`;

exports[`UserBox component snapshot renders profile data with sinlge child 1`] = `
<main>
  <h1
    className="header_fffb07">
    <span
      className="headerText_104b05c">
      Users
    </span>
     > 
    John Doe
  </h1>
  <div
    className="box_5m47zw">
    <form>
      <label>
        Form
      </label>
    </form>
  </div>
</main>
`;
